.. Author notes: this file is formatted with restructured text
   (http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
   The changelog style is adapted from Apache Lucene.

Next Version

API Changes:
  * util-core: `Future.willEqual()` now returns `Future[Boolean]` instead of
               `Promise[Boolean]`.


6.24.0 2014-12-12

New Features:
  * util-core: Add Future.collect() method that collects over Map's values
  * util-stats: Create a new module, `util-stats` to move `finagle-core`
                StatsReceivers to.  They retain the `com.twitter.finagle`
                namespace to ease the transition.

Deprecation:
  * util-stats: Deprecate `com.twitter.finagle.stats.StatsReceiver#time{,TimeFuture}`.
                Instead, please use the `com.twitter.finagle.stats.Stat` helpers
                from scala, and the `com.twitter.finagle.stats.JStats` helpers
                from java.

API Changes:
  * util-cache: Remove unused com.twitter.cache.Mod trait and object
  * util-core: Rename Buf._.Unsafe to Buf._.Owned and Buf._.Copied to Buf._.Shared
  * util-core: Remove the com.twitter.util.repository package

Java Compatibility:
  * util-app: Flaggable is now an abstract class for Java compatibility
  * util-core: Make Futures an API entry point for Java users
               (even for methods that take Scala collections)
  * util-core: Add compilation tests to track Java compatibility of new API


6.22.2  2014-10-29

  * util, finagle: add missing @RunWith annotation
  * Java tests for Duration, Time and Timer
  * util-core: remove Sieve example
  * Reader.writable.fail: make reentrant
  * util-app: add an option so that we can let apps fail fast if reading argument before args are parsed.
  * {finagle,util}-core: Slurry of PartialFunction micro-optimizations

API Changes:
  * util-core: Removed `Sieve` example.
  * util-core: Introduce new constructors and extractors for Buf types to