@@ -7,6 +7,7 @@ Next Version
 API Changes:
   * util-core: `Future.willEqual()` now returns `Future[Boolean]` instead of
                `Promise[Boolean]`.
+  * util-core: Writer now extends Closable.
 
 
 6.24.0 2014-12-12
